# Magna-AI

./: .gitignore  README.md  main.py  render.yaml
backend/: ai_engine.py  main.py  pyproject.toml  requirements.txt  schema.py
backend/test/: scratch_test.py  test_generation.py  test_image.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  globals_modal.css  layout.tsx  page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: Auth.tsx
