[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "supabase>=2.30.0",
    "uvicorn>=0.48.0",
]
